# silk

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.ko.md  README.md  TODO.md  geul-sidx.md  pyproject.toml
draft/: SILK-개요.md  SILK-검수.md  SILK-데모.md  SILK-인코딩.md  SILK-코드북.md  SILK-쿼리.md  SILK-탐색.md
silk/: __init__.py
